test/scc_test/exp/semantic-errors/046.a
046.t:4:5: error: expression must have integral type